Changes to latter section.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -43,13 +43,13 @@
 \license{2013}{4}{普通自動車 第一種免許 取得 (国際)}
 
 % PR
-\subjects{機械設計．ロボット設計．プログラミング．コンピューター力．言語力（英語，フランス語，日本語，スペイン語，レバノン語，アラビア語，中国語，クリオ語）．}
+\subjects{機械設計．ロボット設計．プログラミング．コンピューター力．言語力（英語，フランス語，日本語，スペイン語，レバノン語，アラビア語，中国語，クリオ語．ドイツ語，ロシア語勉強中．）．}
 \selfintro{6個の有償インターンシップ (計2年間) をしたため，新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
-\hobbies{自転車，ランニング，スポーツ，プログラミング，Kerbal Space Program，読書，料理．}
-\strengths{機械設計，プログラミング(Python, C, C++, LaTeX等)，ソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，言語力．}
+\hobbies{自転車，言語，プログラミング，Kerbal Space Program，読書，料理．}
+\strengths{プログラミング(Python, C, C++, LaTeX等)，ソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，機械設計，言語力．}
 %\motive{}
 \desire{給料：ご相談させて頂きたいと思っております\\
-        職種：設計・開発・営業・ロボット}
+        職種：設計・開発・ロボット・プログラミング・プロセス}
 
 % Commute
 \commute{約   時間}
