--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -12,7 +12,7 @@
 \gender{男}
 
 \postalcode{610-1105}
-\address{京都府京都市西京区大枝塚原町3-7-104号室}{きょうとふきょうとしにしきょうくおおえつかはらちょう}
+\address{京都府京都市西京区樫原下ノ町23−1此君園荘B-2号室}{きょうとふきょうとしにしきょうくかたぎはらしものちょう}
 \phone{080-8333-6065}
 \email{mshtsy@gmail.com}
 \otheraddress{同~上}{}
@@ -26,7 +26,7 @@
 \background{2013}{ 7}{京都大学大学院工学研究科機械理工学専攻 (研究生) 入学}
 \background{2014}{ 3}{京都大学大学院工学研究科機械理工学専攻 (研究生) 卒業}
 \background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻 (修士課程) 入学}
-\background{2016}{ 3}{京都大学大学院工学研究科機械理工学専攻 (修士課程) 修了見込み}
+\background{2017}{ 3}{京都大学大学院工学研究科機械理工学専攻 (修士課程) 修了見込み}
 \BackgroundLastNewLine
 
 % Career
@@ -40,13 +40,12 @@
 % Certs
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
-\license{2013}{4}{普通自動車 第一種免許 取得 (国際)}
 
 % PR
-\subjects{機械設計．ロボット設計．プログラミング．コンピューター力．言語力（英語，フランス語，日本語，スペイン語，レバノン語，アラビア語，中国語，クリオ語．ドイツ語，ロシア語勉強中．）．}
-\selfintro{6個の有償インターンシップ (計2年間) をしたため，新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
-\hobbies{自転車，言語，プログラミング，Kerbal Space Program，読書，料理．}
-\strengths{プログラミング(Python, C, C++, LaTeX等)，ソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，機械設計，言語力．}
+\subjects{機械設計．ロボット設計．プログラミング．コンピューター力．言語力（英語，フランス語，日本語，スペイン語，レバノン語，アラビア語，中国語，クリオ語．ドイツ語，ロシア，韓国語は語勉強中．）．}
+\selfintro{6ヶ所で有償インターンシップ (計2年間) をしたため，新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
+\hobbies{自転車，星見，言語，プログラミング，Kerbal Space Program，読書，料理．}
+\strengths{ソフト (Solidworks, Inventor, AutoCAD等)，プログラミング(Python, C, C++, LaTeX等)，OS (Linux, Windows)，機械設計，言語力．}
 %\motive{}
 \desire{給料：ご相談させて頂きたいと思っております\\
         職種：設計・開発・ロボット・プログラミング・プロセス}
