Use Mincho instead of gothic because of rendering problems.

--- a/rireki.cls
+++ b/rireki.cls
@@ -38,7 +38,7 @@
 \setmonofont{DejaVu Sans Code}
 \usepackage{xeCJK}
 \setCJKmainfont{IPAMincho}
-\setCJKsansfont{IPAGothic}
+\setCJKsansfont{IPAMincho}
 \usepackage{xunicode} % extra support for unicode
 \XeTeXlinebreaklocale "ja"
 \XeTeXlinebreakskip=0pt plus 1pt
