--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -25,8 +25,8 @@
 \background{2013}{ 6}{ウォータールー大学工学部メカトロニクス学科　卒業}
 \background{2013}{ 7}{京都大学大学院工学研究科機械理工学専攻 (研究生) 入学}
 \background{2014}{ 3}{京都大学大学院工学研究科機械理工学専攻 (研究生) 卒業}
-\background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻 (修士課程) 入学}
-\background{2017}{ 3}{京都大学大学院工学研究科機械理工学専攻 (修士課程) 修了}
+\background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻 (工学修士) 入学}
+\background{2017}{ 3}{京都大学大学院工学研究科機械理工学専攻 (工学修士) 修了}
 \BackgroundLastNewLine
 
 % Career
