--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -40,6 +40,8 @@
 % Certs
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
+\license{2013}{6}{技術士研修(Engineer in Training)資格　取得}
+\license{2014}{5}{「留学」の在留資格　取得 (2017年7月まで有効)}
 
 % PR
 \subjects{機械設計．ロボット設計．プログラミング．コンピューター力．言語力（英語，フランス語，日本語，スペイン語，レバノン語，アラビア語，中国語，クリオ語．ドイツ語，ロシア，韓国語は語勉強中．）．}
