--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -41,16 +41,16 @@
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
 \license{2013}{6}{技術士研修(Engineer in Training)資格　取得}
-\license{2014}{5}{「留学」の在留資格　取得 (2017年7月まで有効)}
+\license{2014}{5}{「留学」の在留資格　取得 (平成29年7月まで有効)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
 \hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
-\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，ロボット開発，言語力．}
-\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
+\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，ロボット開発，言語力 (11カ国語)．}
+%\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
 \desire{給料：ご相談させて頂きたいと思っております\\
-        職種：マルチスペクトル解析，機械学習，プロセス開発・自動化}
+        職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発}
 
 % Commute
 \commute{約 1 時間}
