Add ZMP motive.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -11,10 +11,10 @@
 \birthday{1990}{11}{5}
 \gender{男}
 
-\postalcode{615-8177}
-\address{京都府京都市西京区樫原下ノ町23−1此君園荘B-2号室}{きょうとふきょうとしにしきょうくかたぎはらしものちょう}
-\phone{080-8333-6065}
-\email{mshtsy@gmail.com}
+\postalcode{T6X\,1M4}
+\address{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
+\phone{+1-587-501-4829}
+\email{jn.masasin@gmail.com}
 \otheraddress{同~上}{}
 
 
@@ -41,19 +41,18 @@
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
 \license{2013}{6}{技術士研修(Engineer in Training)資格　取得}
-\license{2014}{5}{「留学」の在留資格　取得 (平成29年7月まで有効)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
 \hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
 \strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，ロボット開発，言語力 (11カ国語)．}
-%\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
+\motive{ロボットやドローン開発の全面を携わっていて，ロボット技術を世界中に広げようとしているグローバル志向のある御社で感動しました．私の様々なスキルを活かせて，同時に広い分野の知識や能力を上達できるように，応募します．}
 \desire{給料：ご相談させて頂きたいと思っております\\
-        職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発}
+        職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ドローン・ロボット・機械開発}
 
 % Commute
-\commute{約 1 時間}
+\commute{約　時間}
 \dependents{0人}
 \spouse{なし}
 \spousedependence{なし}
