Add Alberta Class 7.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -41,6 +41,7 @@
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
 \license{2013}{6}{技術士研修(Engineer in Training)資格　取得}
+\license{2017}{7}{普通自動車 仮運転免許 取得 (カナダアルバータ州)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
