Add JSME membership.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -40,7 +40,8 @@
 % Certs
 \license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
 \license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
-\license{2013}{6}{技術士研修(Engineer in Training)資格　取得}
+\license{2013}{6}{技術士研修(Engineer in Training)資格 取得}
+\license{2017}{3}{日本機械学会 正員 入会}
 \license{2017}{7}{普通自動車 仮運転免許 取得 (カナダアルバータ州)}
 
 % PR
