Spacing and ordering.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -20,29 +20,29 @@
 
 % Background
 \background{2005}{ 9}{サジェッス高等学校　入学}
-\background{2008}{ 7}{サジェッス高等学校 (国際バカロレア資格) 卒業}
+\background{2008}{ 7}{サジェッス高等学校　卒業　(国際バカロレア資格)}
 \background{2008}{ 9}{ウォータールー大学工学部メカトロニクス学科　入学}
 \background{2013}{ 6}{ウォータールー大学工学部メカトロニクス学科　卒業}
-\background{2013}{ 7}{京都大学大学院工学研究科機械理工学専攻 (研究生) 入学}
-\background{2014}{ 3}{京都大学大学院工学研究科機械理工学専攻 (研究生) 卒業}
-\background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻 (工学修士) 入学}
-\background{2017}{ 3}{京都大学大学院工学研究科機械理工学専攻 (工学修士) 修了}
+\background{2013}{ 7}{京都大学大学院工学研究科機械理工学専攻　入学　(研究生)}
+\background{2014}{ 3}{京都大学大学院工学研究科機械理工学専攻　卒業　(研究生)}
+\background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻　入学　(工学修士)}
+\background{2017}{ 3}{京都大学大学院工学研究科機械理工学専攻　修了　(工学修士)}
 \BackgroundLastNewLine
 
 % Career
-\career{2009}{ 1}{シエラ建設会社 入社 (有償インターン・四ヶ月)} 
-\career{2009}{ 9}{移動ロボット研究室　配属 (有償インターン・四ヶ月)} 
-\career{2010}{ 5}{マルチスケール積層造形研究室 配属 (有償インターン・四ヶ月)：細胞等} 
-\career{2011}{ 1}{IMS株式会社 入社 (有償インターン・四ヶ月)：電子基板} 
-\career{2011}{ 9}{KQS有限会社 入社 (有償インターン・四ヶ月)：自転車設計} 
-\career{2012}{ 5}{Starquip有限会社 入社 (有償インターン・四ヶ月)：工業空気圧機器設計} 
+\career{2009}{ 1}{シエラ建設会社　入社　(有償インターン・四ヶ月)}
+\career{2009}{ 9}{移動ロボット研究室　配属　(有償インターン・四ヶ月)}
+\career{2010}{ 5}{マルチスケール積層造形研究室　配属　(有償インターン・四ヶ月)：細胞等}
+\career{2011}{ 1}{IMS株式会社　入社　(有償インターン・四ヶ月)：電子基板}
+\career{2011}{ 9}{KQS有限会社　入社　(有償インターン・四ヶ月)：自転車設計}
+\career{2012}{ 5}{Starquip有限会社　入社　(有償インターン・四ヶ月)：工業空気圧機器設計}
 
 % Certs
-\license{2010}{12}{普通自動車 第一種免許 取得 (レバノン)}
-\license{2012}{1}{応急処置 心肺蘇生(CPR-HCP)資格 取得}
-\license{2013}{6}{技術士研修(Engineer in Training)資格 取得}
-\license{2017}{3}{日本機械学会 正員 入会}
-\license{2017}{7}{普通自動車 仮運転免許 取得 (カナダアルバータ州)}
+\license{2010}{12}{普通自動車　第一種免許　取得　(レバノン)}
+\license{2012}{ 1}{応急処置　心肺蘇生(CPR-HCP)資格　取得}
+\license{2013}{ 6}{技術士研修(Engineer in Training)資格　取得}
+\license{2017}{ 3}{日本機械学会　正員　入会}
+\license{2017}{ 7}{普通自動車　仮運転免許　取得　(カナダアルバータ州)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
