Add explanation for positions.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -30,8 +30,8 @@
 \BackgroundLastNewLine
 
 % Career
-\career{2009}{ 1}{シエラ建設会社　入社　(有償インターン・四ヶ月)}
-\career{2009}{ 9}{移動ロボット研究室　配属　(有償インターン・四ヶ月)}
+\career{2009}{ 1}{シエラ建設会社　入社　(有償インターン・四ヶ月)：プロセス自動化}
+\career{2009}{ 9}{移動ロボット研究室　配属　(有償インターン・四ヶ月)：同時位置決め地図作成}
 \career{2010}{ 5}{マルチスケール積層造形研究室　配属　(有償インターン・四ヶ月)：細胞等}
 \career{2011}{ 1}{IMS株式会社　入社　(有償インターン・四ヶ月)：電子基板}
 \career{2011}{ 9}{KQS有限会社　入社　(有償インターン・四ヶ月)：自転車設計}
