Add Alberta address.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -11,12 +11,11 @@
 \birthday{1990}{11}{5}
 \gender{男}
 
-\postalcode{615-8177}
-\address{京都府京都市西京区樫原下ノ町23−1此君園荘B-2号室}{きょうとふきょうとしにしきょうくかたぎはらしものちょう}
-\phone{080-8333-6065}
-\email{mshtsy@gmail.com}
+\postalcode{T6X\,1M4}
+\address{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
+\phone{+1-587-501-4829}
+\email{jn.masasin@gmail.com}
 \otheraddress{同~上}{}
-
 
 % Background
 \background{2005}{ 9}{サジェッス高等学校　入学}
