--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -15,6 +15,7 @@
 \address{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
 \phone{+1-587-501-4829}
 \email{jn.masasin@gmail.com}
+\github{masasin}
 \otheraddress{同~上}{}
 
 % Background
