--- a/rireki.cls
+++ b/rireki.cls
@@ -452,8 +452,8 @@
 
 \newcommand{\postalcode}[1]{\gdef\@postalcode{\texttt{#1}}}
 \newcommand{\phone}[1]{\gdef\@phone{\hskip 24pt 電話: \texttt{#1}}}
-\newcommand{\email}[1]{\gdef\@email{\hskip 24pt メール: \texttt{#1}}}
-\newcommand{\github}[1]{\gdef\@github{\hskip 24pt GitHub: \href{https://github.com/#1}{\texttt{#1}}}}
+\newcommand{\email}[1]{\gdef\@email{\hskip 24pt メール: \texttt{\href{mailto:#1}{#1}}}}
+\newcommand{\github}[1]{\gdef\@github{\hskip 24pt GitHub: \texttt{\href{https://github.com/#1}{#1}}}}
 
 \newcommand{\otheraddress}[2] {
   \gdef\@otheraddress{#1}
