--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -60,12 +60,12 @@
 \spousedependence{なし}
 
 % Guardian
-%\guardian[やまだ かずお]{山田 和夫}
-%\guardianpostalcode{123-4567}
-%\guardianaddress[ほごしゃのじゅうしょ]{保護者の住所}
-%\guardianphone{0123-45-6789}
+%\guardian{山田　和夫}{やまだ　かずお}
+%\guardianpostalcode{T6X\,1M4}
+%\guardianaddress{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
+%\guardianphone{+1-587-501-4829}
 
 % Recycled paper
-% \recycled
+%\recycled
 
 \end{document}
