--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -45,16 +45,22 @@
 \license{2017}{ 7}{普通自動車　仮運転免許　取得　(カナダアルバータ州)}
 
 % PR
-\subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
+\subjects{プログラミング，ロボット・機械開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
 \hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
-\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，ロボット開発，言語力 (11カ国語)．}
+\strengths{
+    3Dソフト (Solidworks, Inventor, AutoCAD等)，
+    プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，
+    ロボット開発，
+    OS (Linux, Windows)，
+    言語力 (11カ国語)
+    ．}
 %\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
 \desire{給料：ご相談させて頂きたいと思っております\\
-        職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発}
+        職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット・機械開発}
 
 % Commute
-\commute{約 1 時間}
+\commute{約　時間}
 \dependents{0人}
 \spouse{なし}
 \spousedependence{なし}
