--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -1,4 +1,4 @@
-\documentclass[afour,stamp,picture]{rireki}
+\documentclass[afour,stamp,picture,foreign]{rireki}
 
 \begin{document}
 \date{\today}
@@ -11,11 +11,12 @@
 \birthday{1990}{11}{5}
 \gender{男}
 
-\postalcode{T6X\,1M4}
-\address{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
-\phone{+1-587-501-4829}
+\postalcode{2610}
+\address{Eglantierlaan 49, 2610 Wilrijk, Belgium}{ベルギー，アントワープ}
+\phone{+32 485 29 17 72}
 \email{jn.masasin@gmail.com}
 \github{masasin}
+\linkedin{masasin}
 \otheraddress{同~上}{}
 
 % Background
@@ -36,25 +37,26 @@
 \career{2011}{ 1}{IMS株式会社　入社　(有償インターン・四ヶ月)：電子基板}
 \career{2011}{ 9}{KQS有限会社　入社　(有償インターン・四ヶ月)：自転車設計}
 \career{2012}{ 5}{Starquip有限会社　入社　(有償インターン・四ヶ月)：工業空気圧機器設計}
+\career{2018}{ 2}{Sentiance有限会社　入社：データサイエンティスト・Python専門家}
+\career{2018}{12}{Sentiance有限会社　会社都合により退職}
 
 % Certs
-\license{2010}{12}{普通自動車　第一種免許　取得　(レバノン)}
 \license{2012}{ 1}{応急処置　心肺蘇生(CPR-HCP)資格　取得}
 \license{2013}{ 6}{技術士研修(Engineer in Training)資格　取得}
 \license{2017}{ 3}{日本機械学会　正員　入会}
-\license{2017}{ 7}{普通自動車　仮運転免許　取得　(カナダアルバータ州)}
+\license{2018}{ 7}{普通自動車　第一種免許　取得(ベルギー)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{新しい事を速く習得し，適応能力が高いと思っております．仕事や勉強は一生懸命取り組んで，結果を重視します．}
 \hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
-\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Windows)，ロボット開発，言語力 (11カ国語)．}
+\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Mac, Windows)，ロボット開発，言語力．}
 %\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
 \desire{給料：ご相談させて頂きたいと思っております\\
         職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発}
 
 % Commute
-\commute{約 1 時間}
+\commute{約　　時間}
 \dependents{0人}
 \spouse{なし}
 \spousedependence{なし}
