Add UW program information.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -22,8 +22,8 @@
 % Background
 \background{2005}{ 9}{サジェッス高等学校　入学}
 \background{2008}{ 7}{サジェッス高等学校　卒業　(国際バカロレア資格)}
-\background{2008}{ 9}{ウォータールー大学工学部メカトロニクス学科　入学}
-\background{2013}{ 6}{ウォータールー大学工学部メカトロニクス学科　卒業}
+\background{2008}{ 9}{ウォータールー大学工学部メカトロニクス学科優等課程　入学　(工学士)}
+\background{2013}{ 6}{ウォータールー大学工学部メカトロニクス学科優等課程　卒業　(工学士)}
 \background{2013}{ 7}{京都大学大学院工学研究科機械理工学専攻　入学　(研究生)}
 \background{2014}{ 3}{京都大学大学院工学研究科機械理工学専攻　卒業　(研究生)}
 \background{2014}{ 4}{京都大学大学院工学研究科機械理工学専攻　入学　(工学修士)}
