Make motivation generic.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -48,14 +48,18 @@
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
-\selfintro{新しい事を早く習得し，いろんな分野からの知識を融合します．再利用性や保全性を注目しながら，結果を重視する．}
+\selfintro{
+    様々な職種に携わってきたおかげで，新しい事を早く習得し，幅広い知識とスキルや，多角的な視野を身に付けることができた．
+    %新しい事を早く習得し，いろんな分野からの知識を融合します．
+    %再利用性や保全性を注目しながら，結果を重視する．
+}
 \hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
 \strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Mac, Windows)，ロボット開発，言語力．}
 %\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
-\motive{
-様々な職種に携わってきたおかげで，幅広い知識とスキルや，多角的な視野を身に付けることができた．
-それらを多くの分野で研究開発に挑む御社で発揮できると思って，応募しようとした．
-}
+%\motive{
+    %様々な職種に携わってきたおかげで，幅広い知識とスキルや，多角的な視野を身に付けることができた．
+    %それらを多くの分野で研究開発に挑む御社で発揮できると思って，応募しようとした．
+%}
 \desire{給料：ご相談させて頂きたいと思っております\\
         % 職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発，航空宇宙等\\
         職種：ロボット・機械学習・人工知能・データ分析\\
