Update basic data.

--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -11,8 +11,8 @@
 \birthday{1990}{11}{5}
 \gender{男}
 
-\postalcode{2610}
-\address{Eglantierlaan 49, 2610 Wilrijk, Belgium}{ベルギー，アントワープ}
+\postalcode{1190}
+\address{Bondgenotenstraat 136, 1190 Forest, Belgium}{ベルギー，ブリュッセル}
 \phone{+32 485 29 17 72}
 \email{jn.masasin@gmail.com}
 \github{masasin}
@@ -39,6 +39,8 @@
 \career{2012}{ 5}{Starquip有限会社　入社　(有償インターン・四ヶ月)：工業空気圧機器設計}
 \career{2018}{ 2}{Sentiance有限会社　入社：データサイエンティスト・Python専門家}
 \career{2018}{12}{Sentiance有限会社　会社都合により退職}
+\career{2019}{ 3}{Kapernikov有限会社　入社：インダッシュ4.0コンサルタント}
+% \career{2019}{10}{Kapernikov有限会社　会社都合により退職}
 
 % Certs
 \license{2012}{ 1}{応急処置　心肺蘇生(CPR-HCP)資格　取得}
@@ -69,8 +71,8 @@
 % Commute
 \commute{約　　時間}
 \dependents{0人}
-\spouse{なし}
-\spousedependence{なし}
+\spouse{あり}
+\spousedependence{あり}
 
 % Guardian
 %\guardian{山田　和夫}{やまだ　かずお}
