--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -40,7 +40,7 @@
 \career{2018}{ 2}{Sentiance有限会社　入社：データサイエンティスト・Python専門家}
 \career{2018}{12}{Sentiance有限会社　会社都合により退職}
 \career{2019}{ 3}{Kapernikov有限会社　入社：インダッシュ4.0コンサルタント}
-% \career{2019}{10}{Kapernikov有限会社　会社都合により退職}
+\career{2019}{10}{Kapernikov有限会社　会社都合により退職}
 
 % Certs
 \license{2012}{ 1}{応急処置　心肺蘇生(CPR-HCP)資格　取得}
@@ -51,12 +51,13 @@
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{
-    様々な職種に携わってきたおかげで，新しい事を早く習得し，幅広い知識とスキルや，多角的な視野を身に付けることができた．
+    慎重に働くロボットやPythonの専門家である．
+    様々な職種に携わってきたおかげで，新しい事を早く習得し，幅広い知識とスキルや，多角的な視野を身に付けることができる．
     %新しい事を早く習得し，いろんな分野からの知識を融合します．
     %再利用性や保全性を注目しながら，結果を重視する．
 }
-\hobbies{宇宙，飛行，自転車，登山，言語，プログラミング，読書，料理．}
-\strengths{プログラミング (Python [Scipyスタックを含む]，ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Mac, Windows)，ロボット開発，言語力．}
+\hobbies{自転車，登山，言語，プログラミング，読書，料理．}
+\strengths{Python [Scipyスタックを含む]，その他プログラミング(ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Mac, Windows)，ロボット開発，言語力(9ヶ国語)．}
 %\motive{宇宙の関心でリモートセンシングやGISの興味が生まれて，未だ経験はないのに活かしたいなと思います．しかも，ドローンを使って危険な仕事がなくなるように頑張りたいです．}
 %\motive{
     %様々な職種に携わってきたおかげで，幅広い知識とスキルや，多角的な視野を身に付けることができた．
@@ -64,8 +65,9 @@
 %}
 \desire{給料：ご相談させて頂きたいと思っております\\
         % 職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発，航空宇宙等\\
-        職種：ロボット・機械学習・人工知能・データ分析\\
-        報告：2019年2月下旬・3月上旬の間に日本を訪ねます
+        % 職種：ロボット・機械学習・人工知能・データ分析\\
+        職種：Python・ロボット・機械連動・産業・データ解析
+        % 報告：2019年2月下旬・3月上旬の間に日本を訪ねます
         }
 
 % Commute
