--- a/mshtsy_rireki.tex
+++ b/mshtsy_rireki.tex
@@ -31,30 +31,26 @@
 \BackgroundLastNewLine
 
 % Career
-\career{2009}{ 1}{シエラ建設会社　入社　(有償インターン・四ヶ月)：プロセス自動化}
-\career{2009}{ 9}{移動ロボット研究室　配属　(有償インターン・四ヶ月)：同時位置決め地図作成}
-\career{2010}{ 5}{マルチスケール積層造形研究室　配属　(有償インターン・四ヶ月)：細胞等}
-\career{2011}{ 1}{IMS株式会社　入社　(有償インターン・四ヶ月)：電子基板}
-\career{2011}{ 9}{KQS有限会社　入社　(有償インターン・四ヶ月)：自転車設計}
-\career{2012}{ 5}{Starquip有限会社　入社　(有償インターン・四ヶ月)：工業空気圧機器設計}
+\career{2009}{ 1}{大学卒業条件に従って，2年間（6回$\times$4ヶ月毎）の有償フルタイムインターン}
+\career{2012}{ 8}{プロセス自動化，ロボット，細胞印刷，電子基板，自転車，工業機器の設計開発}
 \career{2018}{ 2}{Sentiance有限会社　入社：データサイエンティスト・Python専門家}
 \career{2018}{12}{Sentiance有限会社　会社都合により退職}
 \career{2019}{ 3}{Kapernikov有限会社　入社：インダッシュ4.0コンサルタント}
 \career{2019}{10}{Kapernikov有限会社　会社都合により退職}
+\career{2019}{12}{Yields有限会社　入社：シニアーPythonデベロッパー}
+\career{2020}{8}{Yields有限会社　労働ビザ廃止につき退職}
 
 % Certs
 \license{2012}{ 1}{応急処置　心肺蘇生(CPR-HCP)資格　取得}
 \license{2013}{ 6}{技術士研修(Engineer in Training)資格　取得}
 \license{2017}{ 3}{日本機械学会　正員　入会}
-\license{2018}{ 7}{普通自動車　第一種免許　取得(ベルギー)}
+\license{2018}{ 7}{普通自動車　第一種免許　取得(ベルギー，日本で切替可能)}
 
 % PR
 \subjects{プログラミング，ロボット開発，コンピューター力，言語力．研究テーマ：「過去画像を用いた飛行ロボットの遠隔操作手法」．}
 \selfintro{
     慎重に働くロボットやPythonの専門家である．
     様々な職種に携わってきたおかげで，新しい事を早く習得し，幅広い知識とスキルや，多角的な視野を身に付けることができる．
-    %新しい事を早く習得し，いろんな分野からの知識を融合します．
-    %再利用性や保全性を注目しながら，結果を重視する．
 }
 \hobbies{自転車，登山，言語，プログラミング，読書，料理．}
 \strengths{Python [Scipyスタックを含む]，その他プログラミング(ROS， C++, \LaTeX 等)，3Dソフト (Solidworks, Inventor, AutoCAD等)，OS (Linux, Mac, Windows)，ロボット開発，言語力(9ヶ国語)．}
@@ -63,6 +59,9 @@
     %様々な職種に携わってきたおかげで，幅広い知識とスキルや，多角的な視野を身に付けることができた．
     %それらを多くの分野で研究開発に挑む御社で発揮できると思って，応募しようとした．
 %}
+\motive{
+    有明プロジェクトによって，コスト削減と伴って，服装等の無駄生産や廃棄物の発生を省き，環境や人類の未来の為にも働きたいと考えから貴社に志望しております.
+}
 \desire{給料：ご相談させて頂きたいと思っております\\
         % 職種：プロセス開発・自動化，機械学習・人工知能，プログラミング，ロボット開発，航空宇宙等\\
         % 職種：ロボット・機械学習・人工知能・データ分析\\
@@ -75,12 +74,6 @@
 \dependents{0人}
 \spouse{あり}
 \spousedependence{あり}
-
-% Guardian
-%\guardian{山田　和夫}{やまだ　かずお}
-%\guardianpostalcode{T6X\,1M4}
-%\guardianaddress{104-150 Edwards Dr SW, Edmonton, AB, Canada}{かなだあるばーたしゅうえどもんとんしえどわーずどらいぶさうすうぇすと}
-%\guardianphone{+1-587-501-4829}
 
 % Recycled paper
 %\recycled
